--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/beli.in
 endorsed.classpath=
 excludes=
+file.reference.Downloads-mysql-connector-5.1.18.jar=C:\\Users\\Administrator\\Downloads\\mysql-connector-5.1.18.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\Muhammad Akbar\\Documents\\NetBeansProjects\\report_akbar\\lib\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${file.reference.Downloads-mysql-connector-5.1.18.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
