--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,8 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\Administrator\\Downloads\\mysql-connector-5.1.18.jar.zip
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\Muhammad Akbar\\AppData\\Roaming\\NetBeans\\18\\build.properties
