--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/beli.in
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.18-bin.jar-1=C:\\Users\\Muhammad Akbar\\Documents\\NetBeansProjects\\report_akbar\\lib\\mysql-connector-java-5.1.18-bin.jar
+file.reference.mysql-connector-5.1.18.jar=C:\\Users\\Administrator\\Downloads\\mysql-connector-5.1.18.jar
+file.reference.ojdbc11.jar=C:\\Users\\Administrator\\Downloads\\ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.mysql_jdbc.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar-1}:\
-    ${libs.my_sql_.classpath}
+    ${file.reference.ojdbc11.jar}:\
+    ${file.reference.mysql-connector-5.1.18.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=18
-javac.target=18
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -81,7 +81,7 @@ main.class=beli.in.BeliIn
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_20
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
